--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ worker_processes auto;
 events {}
 stream {
     upstream backend {
-        server 172.215.211.57:443;
+        server 0.tcp.us-cal-1.ngrok.io:443;
     }
     server {
         listen 8080;
